biomes selection working

--- a/index.html
+++ b/index.html
@@ -226,36 +226,36 @@
                         <td>
                             <select name="as-journalYear">
                                 <option value="">choose year…</option>
-                                <option value='1995'>1995</option>
-                                <option value='1996'>1996</option>
-                                <option value='1997'>1997</option>
-                                <option value='1998'>1998</option>
-                                <option value='1999'>1999</option>
-                                <option value='2000'>2000</option>
-                                <option value='2001'>2001</option>
-                                <option value='2002'>2002</option>
-                                <option value='2003'>2003</option>
-                                <option value='2004'>2004</option>
-                                <option value='2005'>2005</option>
-                                <option value='2006'>2006</option>
-                                <option value='2007'>2007</option>
-                                <option value='2008'>2008</option>
-                                <option value='2009'>2009</option>
-                                <option value='2010'>2010</option>
-                                <option value='2011'>2011</option>
-                                <option value='2012'>2012</option>
-                                <option value='2013'>2013</option>
-                                <option value='2014'>2014</option>
-                                <option value='2015'>2015</option>
-                                <option value='2016'>2016</option>
-                                <option value='2017'>2017</option>
-                                <option value='2018'>2018</option>
-                                <option value='2019'>2019</option>
-                                <option value='2020'>2020</option>
-                                <option value='2021'>2021</option>
-                                <option value='2022'>2022</option>
-                                <option value='2023'>2023</option>
-                                <option value='2024'>2024</option>
+                                <option>1995</option>
+                                <option>1996</option>
+                                <option>1997</option>
+                                <option>1998</option>
+                                <option>1999</option>
+                                <option>2000</option>
+                                <option>2001</option>
+                                <option>2002</option>
+                                <option>2003</option>
+                                <option>2004</option>
+                                <option>2005</option>
+                                <option>2006</option>
+                                <option>2007</option>
+                                <option>2008</option>
+                                <option>2009</option>
+                                <option>2010</option>
+                                <option>2011</option>
+                                <option>2012</option>
+                                <option>2013</option>
+                                <option>2014</option>
+                                <option>2015</option>
+                                <option>2016</option>
+                                <option>2017</option>
+                                <option>2018</option>
+                                <option>2019</option>
+                                <option>2020</option>
+                                <option>2021</option>
+                                <option>2022</option>
+                                <option>2023</option>
+                                <option>2024</option>
                             </select>
                         </td>
                     </tr>
@@ -293,21 +293,32 @@
                         <td colspan="3">
                             <select name="as-biome">
                                 <option value="">choose biome…</option>
-                                <option value="6">Boreal Forests/Taiga</option>
-                                <option value="4">Deserts & Xeric Shrublands</option>
-                                <option value="11">Flooded Grasslands & Savannas</option>
-                                <option value="10">Mangroves</option>
-                                <option value="3">Mediterranean Forests, Woodlands & Scrub</option>
-                                <option value="9">Montane Grasslands & Shrublands</option>
+                                <option>Boreal Forests or Taiga</option>
+                                <option>Deserts and Xeric Shrublands</option>
+                                <option>Flooded Grasslands and Savannas</option>
+                                <option>Mangroves</option>
+                                <option>Mediterranean Forests, Woodlands and Scrub</option>
+                                <option>Montane Grasslands and Shrublands</option>
                                 <!-- <option value="15">N/A</option> -->
-                                <option value="8">Temperate Broadleaf & Mixed Forests</option>
-                                <option value="7">Temperate Conifer Forests</option>
-                                <option value="5" title="synonyms: pampas, veld, savanna">Temperate Grasslands, Savannas & Shrublands</option>
-                                <option value="14">Tropical & Subtropical Coniferous Forests</option>
-                                <option value="13">Tropical & Subtropical Dry Broadleaf Forests</option>
-                                <option value="12">Tropical & Subtropical Grasslands, Savannas & Shrublands</option>
-                                <option value="2">Tropical & Subtropical Moist Broadleaf Forests</option>
-                                <option value="1">Tundra</option>
+                                <option>Temperate Broadleaf and Mixed Forests</option>
+                                <option>Temperate Conifer Forests</option>
+                                <option title="synonyms: Pampas, Veld, Savanna">Temperate Grasslands, Savannas and Shrublands</option>
+                                <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Pampas</option>
+                                <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Veld</option>
+                                <option title="synonyms: Temperate Grasslands, Savannas & Shrublands" disabled>&nbsp;&nbsp;&nbsp;&nbsp;- Savanna</option>
+                                <!-- 
+                                <optgroup label="Temperate Grasslands, Savannas & Shrublands">
+                                    <option value="5">Temperate Grasslands, Savannas & Shrublands</option>
+                                    <option value="5">Pampas</option>
+                                    <option value="5">Veld</option>
+                                    <option value="5">Savanna</option>
+                                </optgroup> 
+                                -->
+                                <option>Tropical and Subtropical Coniferous Forests</option>
+                                <option>Tropical and Subtropical Dry Broadleaf Forests</option>
+                                <option>Tropical and Subtropical Grasslands, Savannas and Shrublands</option>
+                                <option>Tropical and Subtropical Moist Broadleaf Forests</option>
+                                <option>Tundra</option>
                             </select>
                         </td>
                     </tr>
