--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="libs/fancySearch/fancySearch.css">
     <link rel="stylesheet" href="css/sparkline.css">
     <link rel="stylesheet" href="css/simpleLightbox.css">
+    <link rel="stylesheet" href="css/simpleLightbox-modifiers.css">
     <!-- endbuild -->
     
     <link rel="stylesheet" href="libs/JavaScript-autoComplete/auto-complete.css">
