refactored media queries

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/sparkline.css">
     <link rel="stylesheet" href="css/simpleLightbox.css">
     <link rel="stylesheet" href="css/simpleLightbox-modifiers.css">
+    <link rel="stylesheet" href="css/media-queries.css">
     <!-- endbuild -->
     
     <link rel="stylesheet" href="libs/JavaScript-autoComplete/auto-complete.css">
@@ -58,7 +59,7 @@
             <div id="brand" class="reveal" data-reveal="MAP • IMAGES • TREATMENTS">4</div>
             <h1><a href="/index.html">ocellus</a></h1>
             <div class="subtitle">
-                <small>A Plazi Project</small><br>
+                <div class="small">A Plazi Project</div>
                 <a href="#about" class="modalToggle">about</a>
             </div>
         </div>
@@ -130,7 +131,7 @@
                     <label for="switchAdvSearch-2"></label>
                 </div> -->
 
-                <div class="button r hidden" id="button-1" aria-label="toggle advanced search" data-pop="left" data-pop-no-shadow data-pop-arrow>
+                <div class="button r hidden" id="advSearch" aria-label="toggle advanced search" data-pop="left" data-pop-no-shadow data-pop-arrow>
                     <input name="searchtype" type="checkbox" class="checkbox" value="simple">
                     <div class="knobs"></div>
                     <div class="layer"></div>
