--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/toggleSwitch.css">
     <link rel="stylesheet" href="css/cssToggle.css">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/charts.css">
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/throbber.css">
