--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                             resource is either "images" or "treatments" 
                             -->
                             <div id="toggle-resource" class="toggle-container"
-                                aria-label="toggle image vs treatments search" data-pop="top" data-pop-no-shadow 
+                                aria-label="toggle image vs treatments search" 
+                                data-pop="top" data-pop-no-shadow 
                                 data-pop-arrow data-pop-multiline>
 
                                 <label id="toggle4" class="toggle">
@@ -87,30 +88,45 @@
 
                             </div>
 
-                            <input id="q" name="q" type="text" placeholder="search images" class="query ns-val-input">
+                            <input id="q" name="q" type="text" 
+                                placeholder="search images" 
+                                class="query ns-val-input">
 
                             <div id="ns-input-controls">
-                                <input name="refreshCache" id="refreshCache" type="checkbox" value="true" class="query unchecked" aria-label="This will refresh the cache. You probably don't want to do this." data-pop="top" data-pop-no-shadow data-pop-arrow data-pop-multiline>
-                                <button id="clear-q" type="reset" aria-label="reset search" data-pop="top" data-pop-no-shadow data-pop-arrow>&#8855;</button>
+                                <input name="refreshCache" id="refreshCache" 
+                                    type="checkbox" value="true" 
+                                    class="query unchecked" 
+                                    aria-label="This will refresh the cache. You probably don't want to do this." 
+                                    data-pop="top" 
+                                    data-pop-no-shadow data-pop-arrow 
+                                    data-pop-multiline>
+
+                                <button id="clear-q" type="reset" 
+                                    aria-label="reset search" data-pop="top" 
+                                    data-pop-no-shadow 
+                                    data-pop-arrow>&#8855;</button>
                             </div>
                         </div>
 
-                        <button id="ns-go" name="go" type="submit" class="ns-button-primary">go</button>
+                        <button id="ns-go" name="go" type="submit" 
+                            class="ns-button-primary">go</button>
                     </div>
                 </div>
             </div>
 
-            <!-- <div id="fancySearch" class="search-container hidden">
+            <!-- 
+            <div id="fancySearch" class="search-container hidden">
                 <div id="fs-container"></div>
-            </div> -->
+            </div> 
+            -->
 
             <div id="bottom-menu">
                 <div id="quicksearch">                    
-                    <a href="?family=Formicidae" aria-label="find ants" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-ant.svg"></a> 
-                    <a href="?class=Actinopterygii" aria-label="find fishes" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-fish.svg"></a>
-                    <a href="?class=Arachnida" aria-label="find spiders" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-spider.svg"></a>
-                    <a href="?class=Malacostraca" aria-label="find shrimp, crabs and other crustacea" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-shrimp.svg"></a>
-                    <a href="?order=Coleoptera" aria-label="find beetles" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-beetle.svg"></a>
+                    <a class="quicksearch" href="?family=Formicidae" aria-label="find ants" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-ant.svg"></a> 
+                    <a class="quicksearch" href="?class=Actinopterygii" aria-label="find fishes" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-fish.svg"></a>
+                    <a class="quicksearch" href="?class=Arachnida" aria-label="find spiders" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-spider.svg"></a>
+                    <a class="quicksearch" href="?class=Malacostraca" aria-label="find shrimp, crabs and other crustacea" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-shrimp.svg"></a>
+                    <a class="quicksearch" href="?order=Coleoptera" aria-label="find beetles" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-beetle.svg"></a>
                     <a id="search-help" href="#" aria-label="more examples" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-more-examples.svg"></a>
                     <div class="warn hidden"></div>
                 </div>
