fixed adv search form alignments

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <li id="as-publicationDate-range">
 
                         <!-- empty label field to align inputs to the right -->
-                        <label></label>
+                        <label class="empty"></label>
                         <input name="as-publicationDateFrom" id="as-publicationDateFrom" type="date">
                         <span class="hidden">and</span> 
                         <input class="hidden" name="as-publicationDateTo" id="as-publicationDateTo" type="date">
@@ -304,7 +304,7 @@
                     <li id="as-checkinTime-range">
 
                         <!-- empty label field to align inputs to the right -->
-                        <label></label>
+                        <label class="empty"></label>
                         <input name="as-checkinTimeFrom" id="as-checkinTimeFrom" type="date">
                         <span class="hidden">and</span> 
                         <input class="hidden" name="as-checkinTimeTo" id="as-checkinTimeTo" type="date">
@@ -350,14 +350,14 @@
                     </li>
 
                     <li>
-                        <label></label>
-                        <div id="coords" style="display: block; height: 20px;"></div>
+                        <label class="empty2"></label>
+                        <div id="coords" style="display: block; min-height: 20px;"></div>
                     </li>
 
                     <li>
 
                         <!-- empty label to align the following inputs -->
-                        <label></label>
+                        <label class="empty"></label>
                         <input name="as-refreshCache" id="refreshCache-2" type="checkbox" value="true" class="unchecked" aria-label="This will refresh the cache. You probably don't want to do this." data-pop="top" data-pop-no-shadow data-pop-arrow data-pop-multiline>
                         <button id="as-go" name="as-go" type="submit" class="as-button-primary">search</button>
                     </li>
