simplified adv search form

--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
                     
                     <optgroup label="Temperate Grasslands, Savannas & Shrublands">
                         <option value="Temperate Grasslands, Savannas & Shrublands">Temperate Grasslands, Savannas & Shrublands</option>
-                        <option value="Temperate Grasslands, Savannas & Shrublands">Pampas</option>
-                        <option value="Temperate Grasslands, Savannas & Shrublands">Veld</option>
-                        <option value="Temperate Grasslands, Savannas & Shrublands">Savanna</option>
+                        <option value="Temperate Grasslands, Savannas & Shrublands">synonym: Pampas</option>
+                        <option value="Temperate Grasslands, Savannas & Shrublands">synonym: Veld</option>
+                        <option value="Temperate Grasslands, Savannas & Shrublands">synonym: Savanna</option>
                     </optgroup> 
                     
                     <option value="Tropical and Subtropical Coniferous Forests">Biome is Tropical and Subtropical Coniferous Forests</option>
