--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <title>ocellus^4</title>
 
-    <link rel="icon" type="image/png" href="img/ocellus.png">
+    <!-- <link rel="icon" type="image/png" href="img/ocellus.png"> -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- build:css -->
     <link rel="stylesheet" href="css/uglyduck.css">
