favicons comment and transparent footer img

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <title>ocellus^4</title>
 
+    <!-- 
+    favicons derived from "Eye. Kaufer, Waldo Glover, 1906-, artist" 
+    No known restrictions on publication
+    https://www.loc.gov/resource/cph.3b09365/ 
+    -->
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
@@ -407,7 +412,7 @@
     </main>
 
     <footer aria-label="This half-fish is based on the original of a Blunt-Nosed Minnow, Pimephales notatus (Rafinesque) ♂ from the Internet Archive, and has no known copyright restrictions." data-pop="top" data-pop-no-shadow data-pop-arrow data-pop-multiline>
-        <img src="img/fish.jpg">
+        <img src="img/fish.png">
     </footer>
     
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
