added a collectionCode example

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
                     <button class="example-insert">captionText=phylogeny</button><br>
                 </details>
                 <details>
+                    <summary>from the Museum für Naturkunde</summary>
+                    <button class="example-insert">collectionCode=MfN</button>
+                </details>
+                <details>
                     <summary>from the articles published in the European Journal of Taxonomy</summary>
                     <button class="example-insert">journalTitle=eq(European Journal of Taxonomy)</button>
                 </details>
