--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
     </footer>
     
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script src="libs/leaflet-heat/leaflet-heat.js"></script>
 
     <!-- build:js -->
     <!-- endbuild -->
@@ -437,11 +438,13 @@
     <script src="libs/JavaScript-autoComplete/auto-complete.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.3/echarts.min.js"></script>
     <script src="libs/leaflet-draw/dist/leaflet.draw.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/h3-js@4.1.0/dist/browser/h3-js.min.js"></script> -->
+    <script src="https://unpkg.com/h3-js"></script>
     
     <script type="module">
         import { 
             getJournalTitles, 
-            getCollectionCodes 
+            getCollectionCodes
         } from './js/adv-search.js';
 
         function journalTitleAc() {
