--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="libs/pop-pop/pop-pop.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="libs/leaflet-draw/dist/leaflet.draw.css">
+    <link rel="stylesheet" href="libs/leaflet-sidebar/leaflet.sidebar.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.1.0/dist/MarkerCluster.css" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.1.0/dist/MarkerCluster.Default.css" />
@@ -438,6 +439,7 @@
     <!-- <script src="libs/leaflet-heat/leaflet-heat.js"></script> -->
     <script src="https://unpkg.com/leaflet.markercluster@1.1.0/dist/leaflet.markercluster-src.js"></script>
     <script src="libs/leaflet-draw/dist/leaflet.draw.js"></script>
+    <script src="libs/leaflet-sidebar/leaflet.sidebar.min.js"></script>
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
 
     <!-- build:js -->
@@ -471,6 +473,24 @@
         collectionCodeAc();
 
         const SimpleLightbox = window.SimpleLightbox;
+    </script>
+
+    <script>
+        const map = L.map('map');
+        map.setView([51.2, 7], 9);
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 18,
+            attribution: 'Map data &copy; OpenStreetMap contributors'
+        }).addTo(map);
+
+        const marker = L.marker([51.2, 7]).addTo(map);
+
+        const urlParams = new URLSearchParams(window.location.search);
+        const sidebarOptions = {
+            position: urlParams.get('position') ?? 'left'
+        };
+        const sidebar = L.control.sidebar('sidebar', sidebarOptions).addTo(map);
     </script>
   </body>
 </html>
