--- a/index.html
+++ b/index.html
@@ -50,24 +50,15 @@
     <link rel="stylesheet" href="css/simpleLightbox.css">
     <link rel="stylesheet" href="css/simpleLightbox-modifiers.css">
     <link rel="stylesheet" href="css/media-queries.css">
-    <!-- endbuild -->
-    
     <link rel="stylesheet" href="libs/JavaScript-autoComplete/auto-complete.css">
-
     <link rel="stylesheet" href="libs/pop-pop/pop-pop.min.css">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" /> -->
+    <link rel="stylesheet" href="libs/leaflet-draw/dist/leaflet.draw.css">
+    <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.css">
+    <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.Default.css">
+    <!-- endbuild -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     
-    <link rel="stylesheet" href="libs/leaflet-draw/dist/leaflet.draw.css">
-
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.1.0/dist/MarkerCluster.css" /> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.markercluster@1.1.0/dist/MarkerCluster.css" />
-
-	<!-- <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.1.0/dist/MarkerCluster.Default.css" /> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.markercluster@1.1.0/dist/MarkerCluster.Default.css" />
-	
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lora">
   </head>
   <body>
