--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
                             <div id="ns" class="ns">
 
                                 <!-- 
-                                resource is what we want to retrieve and display. 
+                                resource is what we want to retrieve and display 
                                 resource is either "images" or "treatments" 
                                 -->
-                                <div id="toggle-resource" class="toggle-container"
+                                <div id="toggle-resource" 
+                                    class="toggle-container"
                                     aria-label="toggle image vs treatments search" 
                                     data-pop="top" data-pop-no-shadow 
                                     data-pop-arrow data-pop-multiline>
@@ -138,13 +139,19 @@
                 -->
                 
                 <div id="bottom-menu">
-                    <div id="quicksearch">                    
+                    <div id="quicksearch">              
                         <a class="quicksearch" href="?family=Formicidae" aria-label="find ants" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-ant.svg"></a> 
                         <a class="quicksearch" href="?class=Actinopterygii" aria-label="find fishes" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-fish.svg"></a>
                         <a class="quicksearch" href="?class=Arachnida" aria-label="find spiders" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-spider.svg"></a>
                         <a class="quicksearch" href="?class=Malacostraca" aria-label="find shrimp, crabs and other crustacea" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-shrimp.svg"></a>
                         <a class="quicksearch" href="?order=Coleoptera" aria-label="find beetles" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-beetle.svg"></a>
                         <a id="search-help" href="#" aria-label="more examples" data-pop="bottom" data-pop-no-shadow data-pop-arrow><img src="img/icon-more-examples.svg"></a>
+                        <!-- <button class="bg-icon1_ant"    ></button>
+                        <button class="bg-icon2_fish"   ></button>
+                        <button class="bg-icon3_spider" ></button>
+                        <button class="bg-icon4_shrimp" ></button>
+                        <button class="bg-icon5_beetle" ></button>
+                        <button class="bg-icon6_more_examples"></button> -->
                         <div class="warn hidden"></div>
                     </div>
 
