--- a/maps.html
+++ b/maps.html
@@ -41,13 +41,37 @@
     <!-- endbuild -->
 
     <!-- build:css -->
+    <link rel="stylesheet" href="css/uglyduck.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/throbber.css">
     <link rel="stylesheet" href="css/map.css">
     <link rel="stylesheet" href="css/close-btn.css">
     <!-- endbuild -->
+
+    <style>
+#maps {
+    position: relative;
+}
+    </style>
 </head>
 <body>
-    <section id="map"></section>
+    <header>
+        <div class="title">
+            <div id="brand" class="reveal" 
+                data-reveal="MAP • IMAGES • TREATMENTS">4</div>
+            <h1><a href="/index.html">ocellus</a></h1>
+            <div class="subtitle">
+                <div class="small">A Plazi Project</div>
+                <a href="#about" class="modalToggle">about</a>
+            </div>
+        </div>
+    </header>
+    <div id="throbber" class="nothrob"></div>
+    <section id="maps">
+        
+        <div id="map"></div>
+    </section>
     
     <!-- note: leaflet.js has to come before all other leaflet plugins -->
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
