fixed getting image from markers map on bookmark load

--- a/maps.html
+++ b/maps.html
@@ -130,7 +130,7 @@
         window.log.level = log.INFO;
         window.onload = () => initializeMap({ 
             mapContainer: 'map', 
-            baseLayerSource: 'geodeo', 
+            baseLayerSource: 'gbif', 
             drawControl: false 
         });
     </script>
