--- a/maps.html
+++ b/maps.html
@@ -33,6 +33,8 @@
         href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" 
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
         crossorigin="" />
+    <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
     
     <!-- build:csslibs -->
     <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.css">
@@ -122,6 +124,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
 
     <script type="module">
         import { initializeMap } from './js/ocellus-maps.js';
