--- a/maps.html
+++ b/maps.html
@@ -33,13 +33,14 @@
         href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" 
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
         crossorigin="" />
-    <link rel="stylesheet" 
-        href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
+    <!-- <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css"> -->
     
     <!-- build:csslibs -->
     <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.css">
     <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.Default.css">
     <link rel="stylesheet" href="libs/leaflet-slidebar/src/leaflet.slidebar.css">
+    <link rel="stylesheet" href="libs/leaflet-easybutton/easy-button.css">
     <!-- endbuild -->
 
     <!-- build:css -->
@@ -120,11 +121,12 @@
     <!-- build:jslibs -->
     <script src="libs/picolog/picolog.min.js"></script>
     <script src="libs/lazysizes.min.js"></script>
+    <script src="libs/leaflet-easybutton/easy-button.min.js"></script>
     <!-- endbuild -->
 
     <script src="https://cdn.jsdelivr.net/npm/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script> -->
 
     <script type="module">
         import { initializeMap } from './js/ocellus-maps.js';
