significant map cleanup

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.css">
     <link rel="stylesheet" href="libs/leaflet-markercluster/MarkerCluster.Default.css">
     <link rel="stylesheet" href="libs/leaflet-slidebar/src/leaflet.slidebar.css">
+    <link rel="stylesheet" href="libs/leaflet-easybutton/easy-button.css">
     <!-- endbuild -->
 
     <!-- build:css -->
@@ -474,6 +475,7 @@
     <script src="libs/lazysizes.min.js"></script>
     <script src="libs/JavaScript-autoComplete/auto-complete.js"></script>
     <script src="libs/echarts/echarts.min.js"></script>
+    <script src="libs/leaflet-easybutton/easy-button.min.js"></script>
     <!-- endbuild -->
 
     <script src="https://cdn.jsdelivr.net/npm/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
