--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- <link rel="stylesheet" 
-        href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" 
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
-        crossorigin="" /> -->
+    <!-- build:leafletcss -->
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
-    
+    <!-- endbuild -->
+
+    <link rel="stylesheet" href="libs/leaflet-draw/dist/leaflet.draw.css"> 
+
     <!-- build:csslibs -->
     <link rel="stylesheet" href="libs/JavaScript-autoComplete/auto-complete.css">
     <link rel="stylesheet" href="libs/pop-pop/pop-pop.min.css">
     <link rel="stylesheet" href="libs/leaflet-slidebar/src/leaflet.slidebar.css">
-    <link rel="stylesheet" href="node_modules/leaflet-draw/dist/leaflet.draw.css">    
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.css">
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css">
     <link rel="stylesheet" href="node_modules/leaflet-easybutton/src/easy-button.css">
@@ -467,17 +466,19 @@
     </footer>
 
     <!-- note: leaflet.js has to come before all other leaflet plugins -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script> -->
-    
+    <!-- build:leafletjs -->
+    <script src="node_modules/leaflet/dist/leaflet.js"></script>
+    <!-- endbuild -->
+
+    <script src="libs/leaflet-draw/dist/leaflet.draw.js"></script>
+
     <!-- build:jslibs -->
     <script src="libs/simple-lightbox/simpleLightbox.js"></script>
     <script src="libs/picolog/picolog.min.js"></script>
     <script src="libs/lazysizes.min.js"></script>
     <script src="libs/JavaScript-autoComplete/auto-complete.js"></script>
     <script src="libs/echarts/echarts.min.js"></script>
-    <script src="node_modules/leaflet/dist/leaflet.js"></script>
     <script src="node_modules/leaflet-easybutton/src/easy-button.js"></script>
-    <script src="node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
     <script src="node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
     <script src="node_modules/leaflet.vectorgrid/dist/Leaflet.VectorGrid.bundled.js"></script>
     <!-- endbuild -->
