--- a/maps.html
+++ b/maps.html
@@ -44,8 +44,8 @@
     <link rel="stylesheet" href="css/uglyduck.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/toggles.css">
-    <link rel="stylesheet" href="css/grid.css">
+    <!-- <link rel="stylesheet" href="css/toggles.css"> -->
+    <!-- <link rel="stylesheet" href="css/grid.css"> -->
     <link rel="stylesheet" href="css/throbber.css">
     <link rel="stylesheet" href="css/sparkline.css">
     <link rel="stylesheet" href="css/map.css">
